# nemesis

./: .gitignore  README.md  environment.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  unit.yml
scripts/: check_env.py
src/: nemesis.py
src/nemesis.egg-info/: PKG-INFO
tests/: conftest.py
tests/unit/: test_baseline.py  test_smoke.py
