[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nemesis"
version = "0.0.0"
description = "A multi-scale integration framework for hierarchical astrophysical systems in AMUSE"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
  "ruff>=0.12",
]
test = [
  "pytest>=8.0",
  "tomli>=2.0; python_version < '3.11'",
]
docs = []

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = [
  "tests/unit",
]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
  "build",
  "dist",
  "*.egg-info",
  "main.py",
  "src",
  "examples",
  "tests/ZKL_test",
  "tests/cluster_test",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
