[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nemesis"
version = "0.1.0"
description = "NEMESIS framework for nested N-body simulations"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "NEMESIS contributors" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "ruff>=0.4.0",
]
test = [
  "pytest>=8.0.0",
]
docs = [
  "sphinx>=7.0.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = [
  "tests/unit",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
